api 컨트롤러 전부 완료 이미지만 땡기면됨